--- a/index.html
+++ b/index.html
@@ -2,126 +2,156 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>ارزش طلای من</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ارزش لحظه‌ای طلا و ارز</title>
   <style>
     body {
-      font-family: 'Tahoma', sans-serif;
-      background: linear-gradient(to bottom, #f8f9fa, #fff);
       margin: 0;
       padding: 0;
+      font-family: 'Tahoma', sans-serif;
       direction: rtl;
-      text-align: center;
+      background: linear-gradient(to bottom, #fffdf5, #fefefe);
+      color: #333;
     }
 
     header {
       background-color: #fff8e1;
-      padding: 30px 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    h1 {
-      color: #b8860b;
-      margin-bottom: 10px;
+    .prices {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
     }
 
-    #gold-price {
-      font-size: 28px;
-      font-weight: bold;
+    .price-box {
+      background-color: #fff;
+      border: 1px solid #e0c66c;
+      border-radius: 12px;
+      padding: 15px 20px;
+      min-width: 160px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    .price-box h3 {
+      margin: 0;
+      font-size: 16px;
       color: #8b7500;
+    }
+
+    .price-box .value {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 6px 0;
+    }
+
+    .price-box .change {
+      font-size: 14px;
+      color: #555;
     }
 
     .gold-box {
-      background-color: #fff3cd;
+      margin: 30px auto;
+      background-color: #fffbe6;
       border: 2px solid #e0c66c;
-      border-radius: 20px;
-      width: 90%;
-      max-width: 500px;
-      margin: 50px auto;
+      border-radius: 16px;
       padding: 30px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      max-width: 500px;
+      width: 90%;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      text-align: center;
     }
 
     .gold-box h2 {
-      color: #8b7500;
-      margin-bottom: 20px;
-    }
-
-    button {
-      background-color: #ffd700;
-      color: #333;
-      border: none;
-      padding: 12px 25px;
-      border-radius: 10px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 15px;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #e0c200;
+      margin-bottom: 15px;
+      color: #b8860b;
     }
 
     #result {
-      margin-top: 20px;
       font-size: 20px;
-      color: #4d3a00;
       font-weight: bold;
+      color: #4d3a00;
+    }
+
+    @media (max-width: 600px) {
+      .price-box {
+        min-width: 140px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>قیمت لحظه‌ای طلای ۱۸ عیار</h1>
-    <div id="gold-price">در حال دریافت قیمت...</div>
+    <h1 style="text-align:center; color:#b8860b; margin-bottom:20px;">قیمت لحظه‌ای طلا و ارز</h1>
+    <div class="prices" id="prices">
+      <div class="price-box">
+        <h3>طلای ۱۸ عیار</h3>
+        <div class="value" id="gold18-price">در حال دریافت...</div>
+        <div class="change" id="gold18-change"></div>
+      </div>
+      <div class="price-box">
+        <h3>دلار آزاد</h3>
+        <div class="value" id="usd-price">...</div>
+        <div class="change" id="usd-change"></div>
+      </div>
+      <div class="price-box">
+        <h3>انس جهانی طلا</h3>
+        <div class="value" id="xauusd-price">...</div>
+        <div class="change" id="xauusd-change"></div>
+      </div>
+    </div>
   </header>
 
   <div class="gold-box">
-    <h2>ارزش تقریبی طلای من</h2>
-    <button onclick="calculateGoldValue()">محاسبه کن</button>
-    <div id="result">...</div>
+    <h2>ارزش تقریبی طلای من (۲۷۸ واحد)</h2>
+    <div id="result">در حال محاسبه...</div>
   </div>
 
   <script>
-    let currentGoldPrice = null;
-
-    async function fetchGoldPrice() {
+    async function fetchPrices() {
       try {
-        const response = await fetch('https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz');
-        const data = await response.json();
-
-        if (!data.gold || !Array.isArray(data.gold)) throw new Error("ساختار داده نامعتبر است");
+        const res = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
+        const data = await res.json();
 
         const gold18 = data.gold.find(item => item.symbol === "IR_GOLD_18K");
+        const usd = data.gold.find(item => item.symbol === "USD");
+        const xauusd = data.gold.find(item => item.symbol === "XAUUSD");
 
-        if (gold18 && gold18.price) {
-          currentGoldPrice = Number(gold18.price);
-          document.getElementById('gold-price').innerText =
-            `هر گرم: ${currentGoldPrice.toLocaleString()} تومان`;
-        } else {
-          document.getElementById('gold-price').innerText = 'قیمت یافت نشد.';
+        if (gold18) {
+          document.getElementById('gold18-price').innerText = gold18.price.toLocaleString() + " تومان";
+          document.getElementById('gold18-change').innerText = 
+            `${gold18.change_value.toLocaleString()} (${gold18.change_percent}%)`;
+
+          // محاسبه ارزش طلای ۲۷۸ واحد
+          const value = (gold18.price / 750) * 750 * 278;
+          document.getElementById('result').innerText = 
+            `${Math.round(value).toLocaleString()} تومان`;
+        }
+
+        if (usd) {
+          document.getElementById('usd-price').innerText = usd.price.toLocaleString() + " تومان";
+          document.getElementById('usd-change').innerText =
+            `${usd.change_value.toLocaleString()} (${usd.change_percent}%)`;
+        }
+
+        if (xauusd) {
+          document.getElementById('xauusd-price').innerText = xauusd.price.toLocaleString() + " دلار";
+          document.getElementById('xauusd-change').innerText =
+            `${xauusd.change_value.toLocaleString()} (${xauusd.change_percent}%)`;
         }
 
       } catch (error) {
-        console.error(error);
-        document.getElementById('gold-price').innerText = 'خطا در دریافت اطلاعات.';
+        console.error("خطا در دریافت اطلاعات:", error);
+        document.getElementById('result').innerText = "خطا در دریافت قیمت.";
       }
     }
 
-    function calculateGoldValue() {
-      if (!currentGoldPrice) {
-        document.getElementById('result').innerText = 'قیمت هنوز بارگذاری نشده است.';
-        return;
-      }
-
-      const totalGoldValue = (currentGoldPrice / 750) * 750 * 278;
-      document.getElementById('result').innerText =
-        `ارزش طلا: ${Math.round(totalGoldValue).toLocaleString()} تومان`;
-    }
-
-    fetchGoldPrice();
-    setInterval(fetchGoldPrice, 60000);
+    fetchPrices();
+    setInterval(fetchPrices, 60000); // به‌روزرسانی هر دقیقه
   </script>
 
 </body>
