--- a/index.html
+++ b/index.html
@@ -1,197 +1,159 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>قیمت لحظه‌ای طلا و دلار</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>قیمت لحظه‌ای طلا و ارز</title>
   <style>
     body {
+      font-family: sans-serif;
       margin: 0;
-      padding: 0;
-      font-family: 'Tahoma', sans-serif;
-      direction: rtl;
-      background: #f9f9f9;
+      background: #fdfdfd;
       color: #333;
+      padding: 1rem;
     }
 
-    header {
-      background-color: #fff8e1;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .prices {
+    .header {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+      background: #f4f4f4;
+      padding: 1rem;
+      border-radius: 1rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
 
     .price-box {
-      background-color: #fff;
-      border: 1px solid #e0c66c;
-      border-radius: 12px;
-      padding: 15px 20px;
-      min-width: 160px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
     }
 
-    .price-box h3 {
-      margin: 0;
-      font-size: 16px;
-      color: #8b7500;
-    }
-
-    .price-box .value {
-      font-size: 18px;
-      font-weight: bold;
-      margin: 6px 0;
-    }
-
-    .price-box .change {
-      font-size: 14px;
-      color: #555;
+    .price-item {
+      background: white;
+      border-radius: 0.75rem;
+      padding: 1rem;
+      min-width: 180px;
+      box-shadow: 0 1px 8px rgba(0,0,0,0.1);
+      text-align: center;
     }
 
     .gold-box {
-      margin: 30px auto;
-      background-color: #fffbe6;
-      border: 2px solid #e0c66c;
-      border-radius: 16px;
-      padding: 30px;
-      max-width: 500px;
-      width: 90%;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      background: linear-gradient(to bottom right, #ffd700, #fff7c2);
+      padding: 2rem;
+      margin-top: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       text-align: center;
     }
 
-    .gold-box h2 {
-      margin-bottom: 15px;
-      color: #b8860b;
-    }
-
-    #result {
-      font-size: 20px;
-      font-weight: bold;
-      color: #4d3a00;
-    }
-
-    .portfolio-status {
-      max-width: 500px;
-      width: 90%;
-      margin: 20px auto;
-      padding: 20px;
-      border-radius: 16px;
+    .portfolio-box {
+      margin-top: 1rem;
+      padding: 1rem;
+      border-radius: 1rem;
+      text-align: center;
       color: white;
-      font-weight: bold;
-      font-size: 16px;
-      text-align: center;
-    }
-
-    .profit {
-      background-color: #4caf50;
-    }
-
-    .loss {
-      background-color: #f44336;
     }
 
     @media (max-width: 600px) {
       .price-box {
-        min-width: 140px;
+        flex-direction: column;
+        align-items: center;
       }
     }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1 style="text-align:center; color:#b8860b;">قیمت لحظه‌ای طلا و ارز</h1>
-    <div class="prices" id="prices">
-      <div class="price-box">
-        <h3>طلای ۱۸ عیار</h3>
-        <div class="value" id="gold18-price">در حال دریافت...</div>
-        <div class="change" id="gold18-change"></div>
+  <div class="header">
+    <h2>قیمت‌های لحظه‌ای</h2>
+    <div class="price-box">
+      <div class="price-item">
+        <strong>طلای ۱۸ عیار</strong><br>
+        <span id="gold-price">در حال بارگذاری...</span><br>
+        <small id="gold-change"></small>
       </div>
-      <div class="price-box">
-        <h3>دلار آزاد</h3>
-        <div class="value" id="usd-price">...</div>
-        <div class="change" id="usd-change"></div>
+      <div class="price-item">
+        <strong>دلار</strong><br>
+        <span id="usd-price">در حال بارگذاری...</span><br>
+        <small id="usd-change"></small>
       </div>
-      <div class="price-box">
-        <h3>انس جهانی طلا</h3>
-        <div class="value" id="xauusd-price">...</div>
-        <div class="change" id="xauusd-change"></div>
+      <div class="price-item">
+        <strong>انس طلا</strong><br>
+        <span id="xauusd-price">در حال بارگذاری...</span><br>
+        <small id="xauusd-change"></small>
       </div>
     </div>
-  </header>
-
-  <div class="gold-box">
-    <h2>ارزش تقریبی طلای من (۲۷۸ واحد)</h2>
-    <div id="result">در حال محاسبه...</div>
   </div>
 
-  <div id="portfolio" class="portfolio-status">در حال بررسی سود و زیان...</div>
+  <div class="gold-box">
+    <h3>ارزش پورتفوی من</h3>
+    <p id="portfolio-value">...</p>
+  </div>
+
+  <div id="profit-box" class="portfolio-box">
+    در حال محاسبه سود/زیان...
+  </div>
 
   <script>
-    async function fetchPrices() {
+    async function fetchData() {
       try {
-        const res = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
-        const data = await res.json();
+        const response = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
+        const data = await response.json();
 
-        const gold18 = data.gold.find(item => item.symbol === "IR_GOLD_18K");
-        const usd = data.gold.find(item => item.name === "USD");
-        const xauusd = data.gold.find(item => item.symbol === "XAUUSD");
+        const items = data.gold;
 
+        const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
+        const usd = items.find(i => i.symbol === "USD");
+        const xauusd = items.find(i => i.symbol === "XAUUSD");
+
+        // نمایش قیمت‌ها
         if (gold18) {
-          document.getElementById('gold18-price').innerText = gold18.price.toLocaleString() + " تومان";
-          document.getElementById('gold18-change').innerText = 
-            `${gold18.change_value.toLocaleString()} (${gold18.change_percent}%)`;
-
-          // محاسبه ارزش طلای ۲۷۸ واحد
-          const value = (gold18.price / 750) * 750 * 278;
-          document.getElementById('result').innerText = 
-            `${Math.round(value).toLocaleString()} تومان`;
-
-          // محاسبه سود/زیان پورتفوی
-          const change = gold18.change_percent;
-          const portBox = document.getElementById("portfolio");
-          if (change > 0) {
-            portBox.classList.add("profit");
-            portBox.classList.remove("loss");
-            portBox.innerText = `✅ پورتفوی شما طی ۲۴ ساعت گذشته ${change}% سود داشته است.`;
-          } else if (change < 0) {
-            portBox.classList.add("loss");
-            portBox.classList.remove("profit");
-            portBox.innerText = `❌ پورتفوی شما طی ۲۴ ساعت گذشته ${Math.abs(change)}% زیان داشته است.`;
-          } else {
-            portBox.style.background = "#aaa";
-            portBox.innerText = "🔄 پورتفوی شما در ۲۴ ساعت گذشته تغییری نداشته است.";
-          }
+          document.getElementById("gold-price").innerText = gold18.price.toLocaleString() + " تومان";
+          document.getElementById("gold-change").innerText = `${gold18.change_value.toLocaleString()} (${gold18.change_percent}%)`;
         }
 
         if (usd) {
-          document.getElementById('usd-price').innerText = usd.price.toLocaleString() + " تومان";
-          document.getElementById('usd-change').innerText =
-            `${usd.change_value.toLocaleString()} (${usd.change_percent}%)`;
+          document.getElementById("usd-price").innerText = usd.price.toLocaleString() + " تومان";
+          document.getElementById("usd-change").innerText = `${usd.change_value.toLocaleString()} (${usd.change_percent}%)`;
         }
 
         if (xauusd) {
-          document.getElementById('xauusd-price').innerText = xauusd.price.toLocaleString() + " دلار";
-          document.getElementById('xauusd-change').innerText =
-            `${xauusd.change_value.toLocaleString()} (${xauusd.change_percent}%)`;
+          document.getElementById("xauusd-price").innerText = xauusd.price.toLocaleString() + " دلار";
+          document.getElementById("xauusd-change").innerText = `${xauusd.change_value.toLocaleString()} (${xauusd.change_percent}%)`;
         }
 
-      } catch (error) {
-        console.error("خطا در دریافت اطلاعات:", error);
-        document.getElementById('result').innerText = "خطا در دریافت قیمت.";
-        document.getElementById('portfolio').innerText = "خطا در بررسی سود و زیان.";
+        // محاسبه پورتفوی
+        const goldPrice = gold18.price;
+        const totalGoldValue = (goldPrice / 750) * 750 * 278;
+        document.getElementById("portfolio-value").innerText = totalGoldValue.toLocaleString() + " تومان";
+
+        // محاسبه سود/زیان 24 ساعته
+        const change24 = gold18.change_value * 278;
+        const percentChange24 = gold18.change_percent;
+
+        const profitBox = document.getElementById("profit-box");
+        profitBox.innerText = `سود/زیان ۲۴ ساعت اخیر: ${change24.toLocaleString()} تومان (${percentChange24}%)`;
+
+        if (change24 >= 0) {
+          profitBox.style.backgroundColor = "#4caf50"; // سبز
+        } else {
+          profitBox.style.backgroundColor = "#f44336"; // قرمز
+        }
+
+      } catch (err) {
+        console.error("Error fetching data:", err);
+        document.getElementById("gold-price").innerText = "خطا در دریافت اطلاعات";
+        document.getElementById("usd-price").innerText = "خطا";
+        document.getElementById("xauusd-price").innerText = "خطا";
+        document.getElementById("portfolio-value").innerText = "نامشخص";
+        document.getElementById("profit-box").innerText = "خطا در محاسبه سود/زیان";
+        document.getElementById("profit-box").style.backgroundColor = "#999";
       }
     }
 
-    fetchPrices();
-    setInterval(fetchPrices, 60000); // هر 60 ثانیه یکبار به‌روزرسانی
+    fetchData();
   </script>
-
 </body>
 </html>
