--- a/index.html
+++ b/index.html
@@ -4,83 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>قیمت لحظه‌ای طلا</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/font-face.css" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Tahoma', sans-serif;
-      margin: 0;
-      background: #f5f5f5;
-      color: #333;
-      padding: 0;
-    }
-
-    .header {
-      background-color: #004080;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    .price-box {
-      background-color: #ffffff;
-      margin: 1rem auto;
-      padding: 1rem;
-      border-radius: 8px;
-      max-width: 600px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    .price-box h2 {
-      margin: 0 0 1rem 0;
-      color: #004080;
-    }
-
-    .gold-box {
-      background: linear-gradient(to bottom right, #ffd700, #fff7c2);
-      padding: 2rem;
-      margin: 1rem auto;
-      border-radius: 8px;
-      max-width: 600px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    .portfolio-box {
-      margin: 1rem auto;
-      padding: 1rem;
-      border-radius: 8px;
-      max-width: 600px;
-      text-align: center;
-      color: white;
-    }
-
-    @media (max-width: 600px) {
-      .price-box, .gold-box, .portfolio-box {
-        margin: 1rem;
-        padding: 1rem;
-      }
+      font-family: 'Vazirmatn', sans-serif;
     }
   </style>
 </head>
-<body>
-  <div class="header">
-    <h1>سامانه قیمت لحظه‌ای طلا</h1>
-  </div>
+<body class="bg-gray-100 text-gray-800">
 
-  <div class="price-box">
-    <h2>طلای ۱۸ عیار</h2>
-    <p id="gold-price">در حال بارگذاری...</p>
-    <small id="gold-change"></small>
-  </div>
+  <header class="bg-blue-900 text-white py-4 text-center">
+    <h1 class="text-2xl font-bold">سامانه قیمت لحظه‌ای طلا</h1>
+  </header>
 
-  <div class="gold-box">
-    <h3>ارزش پورتفوی من</h3>
-    <p id="portfolio-value">...</p>
-  </div>
+  <main class="max-w-xl mx-auto p-4 space-y-4">
+    
+    <section class="bg-white rounded-xl shadow-md p-6 text-center">
+      <h2 class="text-xl font-bold text-blue-900 mb-2">طلای ۱۸ عیار</h2>
+      <p id="gold-price" class="text-lg">در حال بارگذاری...</p>
+      <small id="gold-change" class="block mt-1 text-sm text-gray-500"></small>
+    </section>
 
-  <div id="profit-box" class="portfolio-box">
-    در حال محاسبه سود/زیان...
-  </div>
+    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+      <h3 class="text-lg font-semibold text-gray-700 mb-2">ارزش پورتفوی من</h3>
+      <p id="portfolio-value" class="text-xl font-bold">...</p>
+    </section>
+
+    <section id="profit-box" class="rounded-xl p-6 text-center text-white">
+      در حال محاسبه سود/زیان...
+    </section>
+
+  </main>
 
   <script>
     async function fetchData() {
@@ -105,29 +60,33 @@
           const profitBox = document.getElementById("profit-box");
           profitBox.innerText = `سود/زیان ۲۴ ساعت اخیر: ${change24.toLocaleString()} تومان (${percentChange24}%)`;
 
+          profitBox.classList.remove("bg-gray-500");
           if (change24 >= 0) {
-            profitBox.style.backgroundColor = "#4caf50"; // سبز
+            profitBox.classList.add("bg-green-500");
           } else {
-            profitBox.style.backgroundColor = "#f44336"; // قرمز
+            profitBox.classList.add("bg-red-500");
           }
         } else {
           document.getElementById("gold-price").innerText = "اطلاعات موجود نیست";
           document.getElementById("portfolio-value").innerText = "نامشخص";
-          document.getElementById("profit-box").innerText = "اطلاعات موجود نیست";
-          document.getElementById("profit-box").style.backgroundColor = "#999";
+          const profitBox = document.getElementById("profit-box");
+          profitBox.innerText = "اطلاعات موجود نیست";
+          profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500";
         }
 
       } catch (err) {
         console.error("خطا:", err);
         document.getElementById("gold-price").innerText = "خطا در دریافت";
         document.getElementById("portfolio-value").innerText = "نامشخص";
-        document.getElementById("profit-box").innerText = "خطا در محاسبه سود/زیان";
-        document.getElementById("profit-box").style.backgroundColor = "#999";
+        const profitBox = document.getElementById("profit-box");
+        profitBox.innerText = "خطا در محاسبه سود/زیان";
+        profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500";
       }
     }
 
     fetchData();
-    setInterval(fetchData, 60000); // به‌روزرسانی هر 60 ثانیه
+    setInterval(fetchData, 60000);
   </script>
+
 </body>
 </html>
