--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <small id="gold-change" class="block mt-1 text-sm text-gray-500"></small>
     </section>
 
-    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+    <section class="bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white text-base font-bold px-10 py-2 rounded-full shadow-md hover:shadow-lg transform hover:scale-105 transition-all duration-300 w-full fancy-button whitespace-nowrap flex justify-center text-center">
       <h3 class="text-lg font-semibold text-gray-700 mb-2">ارزش پورتفوی من</h3>
       <p id="portfolio-value" class="text-xl font-bold">...</p>
     </section>
