--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-    <section class="bg-white rounded-xl shadow-md p-6 text-center">
+    <section class="bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white text-base font-bold px-10 py-2 rounded-full shadow-md hover:shadow-lg transform hover:scale-105 transition-all duration-300 w-full fancy-button whitespace-nowrap flex justify-center text-center">
       <h2 class="text-xl font-bold text-blue-900 mb-2">طلای ۱۸ عیار</h2>
       <p id="gold-price" class="text-lg">در حال بارگذاری...</p>
       <small id="gold-change" class="block mt-1 text-sm text-gray-500"></small>
