--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>قیمت لحظه‌ای طلا</title>
+  <title>پورتفوی طلا</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/font-face.css" rel="stylesheet" />
   <style>
@@ -29,13 +29,13 @@
 <body class="bg-gray-100 text-gray-800">
 
   <header class="bg-blue-900 text-white py-4 text-center">
-    <h1 class="text-2xl font-bold">سامانه قیمت لحظه‌ای طلا</h1>
+    <h1 class="text-2xl font-bold">پورتفوی طلای آبشده</h1>
   </header>
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
     <section class="bg-white rounded-xl shadow-md p-6 text-center">
-      <h2 class="text-xl font-bold text-blue-900 mb-2">طلای ۱۸ عیار</h2>
+      <h2 class="text-xl font-bold text-blue-900 mb-2">قیمت طلای ۱۸ عیار</h2>
       <p id="gold-price" class="text-lg persian-numbers">در حال بارگذاری...</p>
       <small id="gold-change" class="block mt-1 text-sm text-gray-500 persian-numbers"></small>
     </section>
