--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-    <section class="bg-white rounded-xl shadow-md p-6 text-center">
+    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
       <h2 class="text-xl font-bold text-blue-900 mb-2">قیمت طلای ۱۸ عیار</h2>
       <p id="gold-price" class="text-lg persian-numbers">در حال بارگذاری...</p>
       <small id="gold-change" class="block mt-1 text-sm text-gray-500 persian-numbers"></small>
     </section>
 
-    <section class="bg-white rounded-xl shadow-md p-6 text-center">
+    <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
       <h3 class="text-lg font-semibold text-gray-700 mb-2">مقدار طلای من</h3>
       <p id="gold-amount" class="text-xl font-bold persian-numbers">...</p>
     </section>
 
-    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+    <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
       <h3 class="text-lg font-semibold text-gray-700 mb-2">ارزش پورتفوی من</h3>
       <p id="portfolio-value" class="text-xl font-bold persian-numbers">...</p>
     </section>
@@ -82,9 +82,9 @@
           animateElement("gold-change", toPersianNumber(gold18.change_value.toLocaleString()) + " (" + toPersianNumber(gold18.change_percent) + "%)");
 
           const goldPrice = gold18.price;
-          const myGoldGrams = 278;
+          const myGoldGrams = 278.44;
           animateElement("gold-amount", toPersianNumber(myGoldGrams.toLocaleString()) + " گرم");
-          const totalGoldValue = (goldPrice / 750) * 750 * 278;
+          const totalGoldValue = (goldPrice / 750) * 750 * myGoldGrams;
           animateElement("portfolio-value", toPersianNumber(totalGoldValue.toLocaleString()) + " تومان");
 
           const change24 = gold18.change_value * 278;
