--- a/index.html
+++ b/index.html
@@ -37,11 +37,6 @@
      <small id="gold-change" class="block mt-1 text-base text-gray-600 persian-numbers drop-shadow">...</small>
   </section>
 
-  <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
-    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">مقدار طلای آبشده</h3>
-    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
-  </section>
-
   <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
     <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی</h3>
     <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
@@ -50,6 +45,13 @@
   <section id="profit-box" class="rounded-xl p-6 text-center text-white persian-numbers">
     در حال محاسبه سود/زیان...
   </section>
+
+  <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
+    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">مقدار طلای آبشده</h3>
+    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+  </section>
+
+  
 
   <!-- نمایش زمان به‌روزرسانی -->
   <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
@@ -100,27 +102,32 @@
 
           const profitBox = document.getElementById("profit-box");
           profitBox.className = "rounded-xl p-6 text-center text-white bg-purple-500 persian-numbers";
-
           try {
                 const total = 10000;
                 const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1");
                 const symbols = await ayarResponse.json();
                 const ayar = symbols.find(i => i.l18 === "عیار");
-
                 if (ayar && ayar.pc) {
-                   const result = total * ayar.pc;
+                    const result = total * ayar.pc;
+
+                   // مقدار ترکیبی برای نمایش در مقدار طلای آبشده
+                    const combined = totalGoldValue + result;
+                    animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()) + " تومان");
+
+                   // مقدار پورتفوی با گرم در پرانتز
+                   animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()) + " تومان" + " (" + toPersianNumber(myGoldGrams.toLocaleString()) + " گرم)");
+
                    animateElement("profit-box", `
                         <div class="text-2xl font-extrabold drop-shadow">ارزش دارایی معادل ${toPersianNumber(total)} واحد:</div>
                         <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(result.toLocaleString())} تومان</div>
-                 `);
-                } else {
-                   animateElement("profit-box", "صندوق عیار یافت نشد");
-                }
+                   `);
+             } else {
+                       animateElement("profit-box", "صندوق عیار یافت نشد");
+             }
            } catch (err) {
-                   console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
-                   animateElement("profit-box", "خطا در دریافت قیمت صندوق");
+               console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
+               animateElement("profit-box", "خطا در دریافت قیمت صندوق");
            }
-
 
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
